Named all colors, App Icon
gave the app its icon, standarized colors in xmls

--- a/RecipEase/app/src/main/res/values/colors.xml
+++ b/RecipEase/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#f5731b</color>
     <color name="colorPrimaryDark">#63391f</color>
     <color name="colorAccent">#0088ff</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
