--- a/RecipEase/app/src/main/res/layout/content_authentication.xml
+++ b/RecipEase/app/src/main/res/layout/content_authentication.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#08f"
+    android:background="@color/colorAccent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.recipease.project.MainActivity"
     tools:showIn="@layout/activity_authentication">
 
     <ImageView
-        android:layout_width="234dp"
+        android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -42,7 +42,9 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Email"
-        android:textColor="#fff"
+        android:textColor="@color/colorWhite"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColorHighlight="@color/colorPrimary"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +61,9 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Password"
-        android:textColor="#fff"
+        android:textColor="@color/colorWhite"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColorHighlight="@color/colorPrimary"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,8 +82,8 @@
         android:background="@drawable/round_shape_btn"
         android:onClick="btnLogin_Click"
         android:text="Login"
-        android:textColor="#08f"
-        android:textColorHint="#fff"
+        android:textColor="@color/colorAccent"
+        android:textColorHint="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.466"
@@ -96,8 +100,8 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/round_shape_btn"
         android:text="Register"
-        android:textColor="#08f"
-        android:textColorHint="#fff"
+        android:textColor="@color/colorAccent"
+        android:textColorHint="@color/colorWhite"
         android:onClick="btnRegister_Click"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
