--- a/RecipEase/app/src/main/res/layout/activity_recipe_list.xml
+++ b/RecipEase/app/src/main/res/layout/activity_recipe_list.xml
@@ -1,27 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.recipease.project.BrowseRecipesActivity">
+    tools:context="com.recipease.project.BrowseRecipesActivity"
+    android:orientation="vertical">
 
-    <android.support.design.widget.AppBarLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="220dp"
+        android:orientation="vertical"
+        android:nestedScrollingEnabled="true">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="175dp"
+            android:orientation="vertical"
+            android:background="#0088ff"
+            android:weightSum="1"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/relativeLayout">
 
-    </android.support.design.widget.AppBarLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Edit Search"
+                android:id="@+id/editSearchTextView"
+                android:textColor="#ffffff"
+                android:textSize="15dp"
+                android:layout_marginTop="140dp"
+                android:layout_marginLeft="20dp"/>
 
-    <include layout="@layout/content_recipe_list" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sort By"
+                android:id="@+id/sortByTextView"
+                android:layout_marginRight="20dp"
+                android:textSize="15dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="140dp"
+                android:textColor="#ffffff" />
+
+            <ImageView
+                android:layout_width="317dp"
+                android:layout_height="93dp"
+                android:id="@+id/logo"
+                android:src="@drawable/logo"
+                android:layout_gravity="top|center_horizontal"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp" />
+
+        </RelativeLayout>
+
+        <ImageView
+            android:layout_width="317dp"
+            android:layout_height="93dp"
+            android:id="@+id/resultCircle"
+            android:src="@drawable/result_circle"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3 Results"
+            android:id="@+id/resultText"
+            android:layout_gravity="center_horizontal"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="35dp"
+            android:textStyle="bold"
+            android:textSize="20dp" />
 
 
+    </RelativeLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="com.recipease.project.BrowseRecipesActivity">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true" />
+
+    </RelativeLayout>
+
+
+</LinearLayout>
