--- a/RecipEase/app/src/main/res/layout/item_recipe.xml
+++ b/RecipEase/app/src/main/res/layout/item_recipe.xml
@@ -1,52 +1,51 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<?xml version="1.0" encoding="utf-8"?>
+
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:id="@+id/cardview">
 
-    <ImageView
-        android:id="@+id/ivImage"
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        app:srcCompat="@android:drawable/ic_menu_report_image" />
+        android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/ivTransparency"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="150dp"
-        android:background="#aa000000" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/recipeImage"
+            android:adjustViewBounds="true"/>
 
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="268dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="155dp"
-        android:text="Title"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="30sp" />
+        <TextView
+            android:id="@+id/title"
+            style="@style/TextAppearance.AppCompat.Headline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/recipeImage"
+            android:padding="8dp"
+            android:textColor="#000000"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/cooktime"
+            android:layout_below="@id/recipeImage"
+            android:textColor="?android:textColorSecondary"
+            android:padding="8dp"
+            style="@style/TextAppearance.AppCompat.Subhead" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/missing_ingredients"
+            android:layout_below="@id/cooktime"
+            android:text="Number of Missing Ingredients"
+            android:padding="8dp"
+            style="@style/TextAppearance.AppCompat.Subhead" />
 
-    <TextView
-        android:id="@+id/tvCookTime"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/tvTitle"
-        android:text="Cook Time"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp" />
+    </RelativeLayout>
 
-    <TextView
-        android:id="@+id/tvMinutes"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/tvTitle"
-        android:text="minutes"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp" />
 
-</RelativeLayout>
+</android.support.v7.widget.CardView>
+
