Auto-Login and Logout Button
User won't have to type their email and password on subsequent app visits, unless they log out.

--- a/RecipEase/app/src/main/res/layout/content_register.xml
+++ b/RecipEase/app/src/main/res/layout/content_register.xml
@@ -58,6 +58,7 @@
         android:ems="10"
         android:hint="Email"
         android:inputType="textPersonName"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -72,6 +73,7 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPersonName"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etEmail" />
@@ -86,7 +88,7 @@
         android:ems="10"
         android:hint="Display Name"
         android:inputType="textPersonName"
-        android:textColor="#fff"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etPassword" />
@@ -101,6 +103,7 @@
         android:ems="10"
         android:hint="Bio"
         android:inputType="textPersonName"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etDisplayName" />
