--- a/RecipEase/app/src/main/res/layout/activity_home.xml
+++ b/RecipEase/app/src/main/res/layout/activity_home.xml
@@ -17,7 +17,7 @@
         android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_gravity="left|start"
-        android:background="#ffeeeeee"/>
+        android:background="@color/colorWhite"/>
 
     <include layout="@layout/content_home" />
 
