[WIP] Ingredient selection that recommends recipes
For Joe to look at and see my implementation of ingredient selection working (probably not great performance-wise) and how it takes you to recommended recipes. IngredientSelector.java is not used, I used IngredientSelectorTest.java instead.

--- a/RecipEase/app/src/main/res/layout/activity_ingredient_selector.xml
+++ b/RecipEase/app/src/main/res/layout/activity_ingredient_selector.xml
@@ -74,16 +74,13 @@
                         android:scaleType="centerCrop"
                         android:id="@+id/top-dairy-view"
                         android:src="@mipmap/dairy_icon" />
-                    <CheckBox android:id="@+id/milk"
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/ingredientRecyclerView"
+                        android:scrollbars="vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Milk"
-                        android:onClick="addItem"/>
-                    <CheckBox android:id="@+id/cheese"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Cheese"
-                        android:onClick="addItem"/>
+                        android:clickable="true" />
                 </LinearLayout>
             </FrameLayout>
             ​
@@ -125,6 +122,7 @@
             android:id="@+id/veggie-cell"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#fff"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:clipChildren="false"
@@ -203,6 +201,7 @@
             android:id="@+id/fruit-cell"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#fff"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:clipChildren="false"
@@ -276,6 +275,7 @@
             android:id="@+id/meat-cell"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#fff"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:clipChildren="false"
