--- a/RecipEase/app/src/main/res/layout/content_authentication.xml
+++ b/RecipEase/app/src/main/res/layout/content_authentication.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
+    android:background="#fff"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.recipease.project.MainActivity"
     tools:showIn="@layout/activity_authentication">
@@ -42,7 +42,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Email"
-        android:textColor="@color/colorWhite"
+        android:textColor="#08f"
         android:backgroundTint="@color/colorPrimary"
         android:textColorHighlight="@color/colorPrimary"
         android:textSize="20sp"
@@ -61,7 +61,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Password"
-        android:textColor="@color/colorWhite"
+        android:textColor="#08f"
         android:backgroundTint="@color/colorPrimary"
         android:textColorHighlight="@color/colorPrimary"
         android:textSize="20sp"
@@ -98,8 +98,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="72dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/round_shape_btn"
         android:text="Register"
+        android:background="@drawable/round_shape_btn"
         android:textColor="@color/colorAccent"
         android:textColorHint="@color/colorWhite"
         android:onClick="btnRegister_Click"
