--- a/RecipEase/app/src/main/res/drawable/round_shape_btn.xml
+++ b/RecipEase/app/src/main/res/drawable/round_shape_btn.xml
@@ -2,8 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" android:padding="10dp">
     <solid android:color="#fff"/> <!-- this one is ths color of the Rounded Button -->
     <corners
-        android:bottomRightRadius="5dp"
-        android:bottomLeftRadius="5dp"
-        android:topLeftRadius="5dp"
-        android:topRightRadius="5dp"/>
+        android:radius="2sp"/>
+    <stroke android:width="2sp" android:color="#08f" />
 </shape>
