--- a/RecipEase/app/src/main/res/layout/content_register.xml
+++ b/RecipEase/app/src/main/res/layout/content_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#08f"
+    android:background="#fff"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.recipease.project.RegisterActivity"
     tools:layout_editor_absoluteY="81dp"
@@ -58,7 +58,6 @@
         android:ems="10"
         android:hint="Email"
         android:inputType="textPersonName"
-        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -73,7 +72,6 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPersonName"
-        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etEmail" />
@@ -88,7 +86,6 @@
         android:ems="10"
         android:hint="Display Name"
         android:inputType="textPersonName"
-        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etPassword" />
@@ -103,7 +100,6 @@
         android:ems="10"
         android:hint="Bio"
         android:inputType="textPersonName"
-        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etDisplayName" />
@@ -128,10 +124,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/round_shape_btn"
+        android:textColor="#08f"
         android:onClick="registerUser"
         android:padding="10sp"
         android:text="Create Account"
-        android:textColor="#08f"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
