--- a/RecipEase/app/src/main/res/layout/content_register.xml
+++ b/RecipEase/app/src/main/res/layout/content_register.xml
@@ -25,7 +25,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/ivProfilePicture"
         android:layout_width="117dp"
         android:layout_height="106dp"
         android:layout_marginEnd="8dp"
@@ -34,7 +34,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5"
-        app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal" />
+        app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"
+        android:onClick="selectProfilePicture" />
 
 
     <TextView
@@ -46,7 +47,7 @@
         android:text="Upload Profile Picture"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/ivProfilePicture" />
 
     <EditText
         android:id="@+id/etEmail"
