--- a/RecipEase/app/src/main/res/layout/item_ingredient.xml
+++ b/RecipEase/app/src/main/res/layout/item_ingredient.xml
@@ -1,31 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="8dp"
-    android:id="@+id/cardview"
-    tools:context="com.recipease.project.IngredientSelectorTest">
-
-
-    <RelativeLayout
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
 
-        <CheckBox android:id="@+id/name"
+
+        <TextView
+            android:id="@+id/lbl_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:textColor="#000000"
-            android:text="Name"
-            style="@style/TextAppearance.AppCompat.Subhead"
-            android:onClick="addItem"/>
+            android:layout_height="80dp"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="temp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="16sp" />
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        />
 
-    </RelativeLayout>
-
-
-</android.support.v7.widget.CardView>
-
-
+</LinearLayout>
