--- a/RecipEase/app/src/main/res/layout/activity_ingredient_selector.xml
+++ b/RecipEase/app/src/main/res/layout/activity_ingredient_selector.xml
@@ -47,307 +47,27 @@
             </com.miguelcatalan.materialsearchview.MaterialSearchView>
         </android.support.v7.widget.Toolbar>
 
-        <com.ramotion.foldingcell.FoldingCell
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/dairy-cell"
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:clipChildren="false"
-            android:clipToPadding="false">
-            ​
-            <FrameLayout
-                android:id="@+id/dairy-content"
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            tools:context="com.recipease.project.BrowseRecipesActivity">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:scrollbars="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#fff"
-                android:visibility="gone">
-                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:orientation="vertical"
-                    android:layout_width="fill_parent"
-                    android:layout_height="250dp">
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:adjustViewBounds="true"
-                        android:scaleType="centerCrop"
-                        android:id="@+id/top-dairy-view"
-                        android:src="@mipmap/dairy_icon" />
+                android:clickable="true" />
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/ingredientRecyclerView"
-                        android:scrollbars="vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:clickable="true" />
-                </LinearLayout>
-            </FrameLayout>
-            ​
-            <RelativeLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/dairy-relative-layout"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent" >
+        </RelativeLayout>
 
 
-                <ImageView
-                    android:id="@+id/dairy-view"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/dairy_icon" />
-
-                <TextView
-                    android:id="@+id/diary-title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignLeft="@id/dairy-view"
-                    android:layout_alignTop="@id/dairy-view"
-                    android:layout_alignRight="@id/dairy-view"
-                    android:layout_alignBottom="@id/dairy-view"
-                    android:layout_margin="1dp"
-                    android:gravity="center"
-                    android:text="Dairy"
-                    android:textSize="40sp"
-                    android:fontFamily="cursive"
-                    android:textColor="#fff" />
-            </RelativeLayout>
-            ​
-        </com.ramotion.foldingcell.FoldingCell>
-
-        <com.ramotion.foldingcell.FoldingCell
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/veggie-cell"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#fff"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:clipChildren="false"
-            android:clipToPadding="false"
-            >
-            ​
-            <FrameLayout
-                android:id="@+id/cell_content_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#fff"
-                android:visibility="gone">
-
-
-
-
-                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:orientation="vertical"
-                    android:layout_width="fill_parent"
-                    android:layout_height="250dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:adjustViewBounds="true"
-                        android:scaleType="centerCrop"
-                        android:id="@+id/top-veggie-view"
-                        android:src="@mipmap/veggie_icon" />
-                    <CheckBox android:id="@+id/carrot"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Carrots"
-                        android:onClick="addItem"/>
-                    <CheckBox android:id="@+id/spinach"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Spinach"
-                        android:onClick="addItem"/>
-                </LinearLayout>
-            </FrameLayout>
-            ​
-            <RelativeLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/relativelayout"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent" >
-
-
-                <ImageView
-                    android:id="@+id/veggie-view"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/veggie_icon" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignLeft="@id/veggie-view"
-                    android:layout_alignTop="@id/veggie-view"
-                    android:layout_alignRight="@id/veggie-view"
-                    android:layout_alignBottom="@id/veggie-view"
-                    android:layout_margin="1dp"
-                    android:gravity="center"
-                    android:text="Vegetables"
-                    android:textSize="40sp"
-                    android:fontFamily="cursive"
-                    android:textColor="#fff" />
-            </RelativeLayout>
-            ​
-        </com.ramotion.foldingcell.FoldingCell>
-
-        <com.ramotion.foldingcell.FoldingCell
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/fruit-cell"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#fff"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:clipChildren="false"
-            android:clipToPadding="false">
-            ​
-            <FrameLayout
-                android:id="@+id/fruit-content"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#fff"
-                android:visibility="gone">
-                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:orientation="vertical"
-                    android:layout_width="fill_parent"
-                    android:layout_height="250dp">
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:adjustViewBounds="true"
-                        android:scaleType="centerCrop"
-                        android:id="@+id/top-fruits-view"
-                        android:src="@mipmap/fruit_icon" />
-                    <CheckBox android:id="@+id/apple"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Apple"
-                        android:onClick="addItem"/>
-                    <CheckBox android:id="@+id/banana"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Banana"
-                        android:onClick="addItem"/>
-                </LinearLayout>
-            </FrameLayout>
-            ​
-            <RelativeLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/fruit-relative-layout"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent" >
-
-
-                <ImageView
-                    android:id="@+id/fruit-view"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/fruit_icon" />
-
-                <TextView
-                    android:id="@+id/fruit-title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignLeft="@id/fruit-view"
-                    android:layout_alignTop="@id/fruit-view"
-                    android:layout_alignRight="@id/fruit-view"
-                    android:layout_alignBottom="@id/fruit-view"
-                    android:layout_margin="1dp"
-                    android:gravity="center"
-                    android:text="Fruits"
-                    android:textSize="40sp"
-                    android:fontFamily="cursive"
-                    android:textColor="#fff" />
-            </RelativeLayout>
-            ​
-        </com.ramotion.foldingcell.FoldingCell>
-
-        <com.ramotion.foldingcell.FoldingCell
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/meat-cell"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#fff"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:clipChildren="false"
-            android:clipToPadding="false">
-            ​
-            <FrameLayout
-                android:id="@+id/meat_cell_content_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#fff"
-                android:visibility="gone">
-
-
-
-
-                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:orientation="vertical"
-                    android:layout_width="fill_parent"
-                    android:layout_height="250dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:adjustViewBounds="true"
-                        android:scaleType="centerCrop"
-                        android:id="@+id/top-meat-view"
-                        android:src="@mipmap/meat_icon" />
-                    <CheckBox android:id="@+id/bacon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Bacon"
-                        android:onClick="addItem"/>
-                    <CheckBox android:id="@+id/chicken"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Chicken"
-                        android:onClick="addItem"/>
-                </LinearLayout>
-            </FrameLayout>
-            ​
-            <RelativeLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/meat_relativelayout"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent" >
-
-
-                <ImageView
-                    android:id="@+id/meat-view"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/meat_icon" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignLeft="@id/meat-view"
-                    android:layout_alignTop="@id/meat-view"
-                    android:layout_alignRight="@id/meat-view"
-                    android:layout_alignBottom="@id/meat-view"
-                    android:layout_margin="1dp"
-                    android:gravity="center"
-                    android:text="Meats"
-                    android:textSize="40sp"
-                    android:fontFamily="cursive"
-                    android:textColor="#fff" />
-            </RelativeLayout>
-
-            ​
-        </com.ramotion.foldingcell.FoldingCell>
 
         <Button
             android:layout_width="wrap_content"
