--- a/RecipEase/app/src/main/res/layout/item_selected_ingredient.xml
+++ b/RecipEase/app/src/main/res/layout/item_selected_ingredient.xml
@@ -12,13 +12,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/trash"
-            android:adjustViewBounds="true" />
+        android:layout_height="50dp">
 
         <TextView
             android:id="@+id/name"
@@ -29,6 +23,14 @@
             android:padding="8dp"
             android:textColor="#000000"
             android:theme="@style/ThemeOverlay.AppCompat.Dark" />
+
+        <ImageView
+            android:id="@+id/trash"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:adjustViewBounds="true" />
 
     </RelativeLayout>
 
